[package]
name = "reddit-fs"
version = "0.1.0"
edition = "2021"
description = "Access reddit through a filesystem"
authors = ["LevitatingBusinessMan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.11.1"
anyhow = "1.0.48"
libc = "0.2.108"
lazy_static = "1.4.0"
orca = "0.7.0"
serde_json = "1.0.71"
clap = { version = "4.0.26", features = ["derive"] }
