[package]
name = "reddit-fs"
version = "0.3.0"
edition = "2021"
description = "Access reddit through a filesystem"
authors = ["LevitatingBusinessMan"]
homepage = "https://github.com/LevitatingBusinessMan/reddit-fs"
repository = "https://github.com/LevitatingBusinessMan/reddit-fs"
license = "MIT"

[dependencies]
fuser = "0.12.0"
anyhow = "1.0.48"
libc = "0.2.108"
lazy_static = "1.4.0"
orca = "0.7.0"
serde_json = "1.0.71"
clap = { version = "4.0.26", features = ["derive"] }
ctrlc = "3.2.3"
